# media_notes

./: Cargo.toml  README.md
.github/workflows/: ci-checks.yaml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/helpers/: mod.rs
src/cli/input/: input_handlers.rs
